parser/y.output

0: shift/reduce conflict (shift 5(0), red'n 180(0)) on ';'
0: shift/reduce conflict (shift 8(0), red'n 180(0)) on '\n'
state 0
	$accept: .compstmt $end 
	opt_term: .    (180)

	';'  shift 5
	'\n'  shift 8
	.  reduce 180 (src line 1145)

	compstmt  goto 1
	stmts  goto 3
	opt_term  goto 2
	term  goto 4
	newlines  goto 6
	newline  goto 7

state 1
	$accept:  compstmt.$end 

	$end  accept
	.  error


 2: reduce/reduce conflict  (red'ns 1 and 5) on $end
 2: reduce/reduce conflict  (red'ns 1 and 5) on CASE
 2: reduce/reduce conflict  (red'ns 1 and 5) on DEFAULT
 2: reduce/reduce conflict  (red'ns 1 and 5) on '}'
 2: reduce/reduce conflict  (red'ns 1 and 5) on '\n'
state 2
	compstmt:  opt_term.    (1)
	stmts:  opt_term.stmt 
	stmt: .    (5)
	exprs: .    (69)

	IDENT  shift 37
	NUMBER  shift 54
	STRING  shift 55
	FUNC  shift 33
	RETURN  shift 13
	VAR  shift 50
	THROW  shift 14
	IF  shift 27
	FOR  shift 28
	NEW  shift 41
	TRUE  shift 56
	FALSE  shift 57
	NIL  shift 58
	MODULE  shift 15
	TRY  shift 16
	BREAK  shift 11
	CONTINUE  shift 12
	SWITCH  shift 29
	SELECT  shift 30
	GO  shift 17
	MAKE  shift 42
	OPCHAN  shift 59
	EQOPCHAN  reduce 69 (src line 521)
	LEN  shift 39
	DELETE  shift 18
	CLOSE  shift 19
	MAP  shift 43
	IMPORT  shift 40
	COLASSIGN  reduce 69 (src line 521)
	ASSIGN  reduce 69 (src line 521)
	'-'  shift 53
	'^'  shift 61
	'*'  shift 63
	'&'  shift 62
	'{'  shift 44
	'('  shift 36
	','  reduce 69 (src line 521)
	';'  reduce 5 (src line 151)
	'['  shift 34
	'!'  shift 60
	.  reduce 1 (src line 116)

	stmt  goto 9
	stmt_var_or_lets  goto 10
	stmt_var  goto 25
	stmt_lets  goto 26
	stmt_if  goto 20
	stmt_for  goto 21
	stmt_switch  goto 22
	stmt_select  goto 23
	exprs  goto 51
	expr  goto 24
	slice_count  goto 35
	expr_member_or_ident  goto 31
	expr_member  goto 52
	expr_ident  goto 38
	expr_literals  goto 32
	expr_slice  goto 45
	expr_chan  goto 46
	expr_unary  goto 47
	expr_binary  goto 48
	expr_lets  goto 49
	op_binary  goto 67
	op_comparison  goto 66
	op_add  goto 65
	op_multiply  goto 64

3: shift/reduce conflict (shift 8(0), red'n 180(0)) on '\n'
state 3
	compstmt:  stmts.opt_term 
	stmts:  stmts.term stmt 
	opt_term: .    (180)

	';'  shift 5
	'\n'  shift 8
	.  reduce 180 (src line 1145)

	opt_term  goto 68
	term  goto 69
	newlines  goto 6
	newline  goto 7

state 4
	opt_term:  term.    (181)

	.  reduce 181 (src line 1147)


5: shift/reduce conflict (shift 8(0), red'n 184(0)) on '\n'
state 5
	term:  ';'.newlines 
	term:  ';'.    (184)

	'\n'  shift 8
	.  reduce 184 (src line 1152)

	newlines  goto 70
	newline  goto 7

6: shift/reduce conflict (shift 8(0), red'n 183(0)) on '\n'
state 6
	term:  newlines.    (183)
	newlines:  newlines.newline 

	'\n'  shift 8
	.  reduce 183 (src line 1151)

	newline  goto 71

state 7
	newlines:  newline.    (187)

	.  reduce 187 (src line 1158)


state 8
	newline:  '\n'.    (189)

	.  reduce 189 (src line 1162)


state 9
	stmts:  opt_term stmt.    (3)

	.  reduce 3 (src line 126)


state 10
	stmt:  stmt_var_or_lets.    (6)

	.  reduce 6 (src line 156)


state 11
	stmt:  BREAK.    (7)

	.  reduce 7 (src line 160)


state 12
	stmt:  CONTINUE.    (8)

	.  reduce 8 (src line 165)


state 13
	stmt:  RETURN.exprs 
	exprs: .    (69)

	IDENT  shift 37
	NUMBER  shift 54
	STRING  shift 55
	FUNC  shift 33
	NEW  shift 41
	TRUE  shift 56
	FALSE  shift 57
	NIL  shift 58
	MAKE  shift 42
	OPCHAN  shift 59
	LEN  shift 39
	MAP  shift 43
	IMPORT  shift 40
	'-'  shift 53
	'^'  shift 61
	'*'  shift 63
	'&'  shift 62
	'{'  shift 44
	'('  shift 36
	'['  shift 34
	'!'  shift 60
	.  reduce 69 (src line 521)

	exprs  goto 72
	expr  goto 73
	slice_count  goto 35
	expr_member_or_ident  goto 31
	expr_member  goto 52
	expr_ident  goto 38
	expr_literals  goto 32
	expr_slice  goto 45
	expr_chan  goto 46
	expr_unary  goto 47
	expr_binary  goto 48
	expr_lets  goto 49
	op_binary  goto 67
	op_comparison  goto 66
	op_add  goto 65
	op_multiply  goto 64

state 14
	stmt:  THROW.expr 

	IDENT  shift 37
	NUMBER  shift 54
	STRING  shift 55
	FUNC  shift 33
	NEW  shift 41
	TRUE  shift 56
	FALSE  shift 57
	NIL  shift 58
	MAKE  shift 42
	OPCHAN  shift 59
	LEN  shift 39
	MAP  shift 43
	IMPORT  shift 40
	'-'  shift 53
	'^'  shift 61
	'*'  shift 63
	'&'  shift 62
	'{'  shift 44
	'('  shift 36
	'['  shift 34
	'!'  shift 60
	.  error

	expr  goto 74
	slice_count  goto 35
	expr_member_or_ident  goto 31
	expr_member  goto 52
	expr_ident  goto 38
	expr_literals  goto 32
	expr_slice  goto 45
	expr_chan  goto 46
	expr_unary  goto 47
	expr_binary  goto 48
	expr_lets  goto 49
	op_binary  goto 67
	op_comparison  goto 66
	op_add  goto 65
	op_multiply  goto 64

state 15
	stmt:  MODULE.IDENT '{' compstmt '}' 

	IDENT  shift 75
	.  error


state 16
	stmt:  TRY.'{' compstmt '}' CATCH IDENT '{' compstmt '}' FINALLY '{' compstmt '}' 
	stmt:  TRY.'{' compstmt '}' CATCH '{' compstmt '}' FINALLY '{' compstmt '}' 
	stmt:  TRY.'{' compstmt '}' CATCH IDENT '{' compstmt '}' 
	stmt:  TRY.'{' compstmt '}' CATCH '{' compstmt '}' 

	'{'  shift 76
	.  error


state 17
	stmt:  GO.IDENT '(' exprs VARARG ')' 
	stmt:  GO.IDENT '(' exprs ')' 
	stmt:  GO.expr '(' exprs VARARG ')' 
	stmt:  GO.expr '(' exprs ')' 

	IDENT  shift 77
	NUMBER  shift 54
	STRING  shift 55
	FUNC  shift 33
	NEW  shift 41
	TRUE  shift 56
	FALSE  shift 57
	NIL  shift 58
	MAKE  shift 42
	OPCHAN  shift 59
	LEN  shift 39
	MAP  shift 43
	IMPORT  shift 40
	'-'  shift 53
	'^'  shift 61
	'*'  shift 63
	'&'  shift 62
	'{'  shift 44
	'('  shift 36
	'['  shift 34
	'!'  shift 60
	.  error

	expr  goto 78
	slice_count  goto 35
	expr_member_or_ident  goto 31
	expr_member  goto 52
	expr_ident  goto 38
	expr_literals  goto 32
	expr_slice  goto 45
	expr_chan  goto 46
	expr_unary  goto 47
	expr_binary  goto 48
	expr_lets  goto 49
	op_binary  goto 67
	op_comparison  goto 66
	op_add  goto 65
	op_multiply  goto 64

state 18
	stmt:  DELETE.'(' expr ')' 
	stmt:  DELETE.'(' expr ',' expr ')' 

	'('  shift 79
	.  error


state 19
	stmt:  CLOSE.'(' expr ')' 

	'('  shift 80
	.  error


state 20
	stmt:  stmt_if.    (23)
	stmt_if:  stmt_if.ELSE IF expr '{' compstmt '}' 
	stmt_if:  stmt_if.ELSE '{' compstmt '}' 

	ELSE  shift 81
	.  reduce 23 (src line 240)


state 21
	stmt:  stmt_for.    (24)

	.  reduce 24 (src line 244)


state 22
	stmt:  stmt_switch.    (25)

	.  reduce 25 (src line 248)


state 23
	stmt:  stmt_select.    (26)

	.  reduce 26 (src line 252)


24: shift/reduce conflict (shift 83(2), red'n 70(0)) on EQOPCHAN
24: shift/reduce conflict (shift 116(0), red'n 70(0)) on COLASSIGN
24: shift/reduce conflict (shift 117(0), red'n 70(0)) on ASSIGN
state 24
	stmt:  expr.    (27)
	stmt_lets:  expr.op_assign expr 
	stmt_lets:  expr.EQOPCHAN expr 
	exprs:  expr.    (70)
	expr:  expr.'?' expr ':' expr 
	expr:  expr.NILCOALESCE expr 
	expr:  expr.'(' exprs VARARG ')' 
	expr:  expr.'(' exprs ')' 
	expr:  expr.'[' expr ']' 
	expr:  expr.IN expr 
	expr_member:  expr.'.' IDENT 
	expr_slice:  expr.'[' expr ':' expr ']' 
	expr_slice:  expr.'[' expr ':' ']' 
	expr_slice:  expr.'[' ':' expr ']' 
	expr_slice:  expr.'[' ':' expr ':' expr ']' 
	expr_slice:  expr.'[' expr ':' expr ':' expr ']' 
	expr_chan:  expr.OPCHAN expr 
	expr_lets:  expr.PLUSPLUS 
	expr_lets:  expr.MINUSMINUS 
	expr_lets:  expr.PLUSEQ expr 
	expr_lets:  expr.MINUSEQ expr 
	expr_lets:  expr.OREQ expr 
	expr_lets:  expr.MULEQ expr 
	expr_lets:  expr.DIVEQ expr 
	expr_lets:  expr.ANDEQ expr 
	op_multiply:  expr.'*' expr 
	op_multiply:  expr.'/' expr 
	op_multiply:  expr.'%' expr 
	op_multiply:  expr.SHIFTLEFT expr 
	op_multiply:  expr.SHIFTRIGHT expr 
	op_multiply:  expr.'&' expr 
	op_add:  expr.'+' expr 
	op_add:  expr.'-' expr 
	op_add:  expr.'|' expr 
	op_comparison:  expr.EQEQ expr 
	op_comparison:  expr.NEQ expr 
	op_comparison:  expr.'<' expr 
	op_comparison:  expr.LE expr 
	op_comparison:  expr.'>' expr 
	op_comparison:  expr.GE expr 
	op_binary:  expr.ANDAND expr 
	op_binary:  expr.OROR expr 

	IN  shift 88
	EQEQ  shift 108
	NEQ  shift 109
	GE  shift 113
	LE  shift 111
	OROR  shift 115
	ANDAND  shift 114
	NILCOALESCE  shift 85
	PLUSEQ  shift 93
	MINUSEQ  shift 94
	MULEQ  shift 96
	DIVEQ  shift 97
	ANDEQ  shift 98
	OREQ  shift 95
	PLUSPLUS  shift 91
	MINUSMINUS  shift 92
	SHIFTLEFT  shift 102
	SHIFTRIGHT  shift 103
	OPCHAN  shift 90
	EQOPCHAN  shift 83
	COLASSIGN  shift 116
	ASSIGN  shift 117
	'?'  shift 84
	'<'  shift 110
	'>'  shift 112
	'+'  shift 105
	'-'  shift 106
	'|'  shift 107
	'*'  shift 99
	'/'  shift 100
	'%'  shift 101
	'&'  shift 104
	'('  shift 86
	','  reduce 70 (src line 526)
	'['  shift 87
	'.'  shift 89
	.  reduce 27 (src line 256)

	op_assign  goto 82

state 25
	stmt_var_or_lets:  stmt_var.    (28)

	.  reduce 28 (src line 262)


state 26
	stmt_var_or_lets:  stmt_lets.    (29)

	.  reduce 29 (src line 267)


state 27
	stmt_if:  IF.expr '{' compstmt '}' 

	IDENT  shift 37
	NUMBER  shift 54
	STRING  shift 55
	FUNC  shift 33
	NEW  shift 41
	TRUE  shift 56
	FALSE  shift 57
	NIL  shift 58
	MAKE  shift 42
	OPCHAN  shift 59
	LEN  shift 39
	MAP  shift 43
	IMPORT  shift 40
	'-'  shift 53
	'^'  shift 61
	'*'  shift 63
	'&'  shift 62
	'{'  shift 44
	'('  shift 36
	'['  shift 34
	'!'  shift 60
	.  error

	expr  goto 118
	slice_count  goto 35
	expr_member_or_ident  goto 31
	expr_member  goto 52
	expr_ident  goto 38
	expr_literals  goto 32
	expr_slice  goto 45
	expr_chan  goto 46
	expr_unary  goto 47
	expr_binary  goto 48
	expr_lets  goto 49
	op_binary  goto 67
	op_comparison  goto 66
	op_add  goto 65
	op_multiply  goto 64

 28: reduce/reduce conflict  (red'ns 107 and 69) on ','
state 28
	stmt_for:  FOR.'{' compstmt '}' 
	stmt_for:  FOR.expr_idents IN expr '{' compstmt '}' 
	stmt_for:  FOR.expr '{' compstmt '}' 
	stmt_for:  FOR.';' ';' '{' compstmt '}' 
	stmt_for:  FOR.';' ';' expr '{' compstmt '}' 
	stmt_for:  FOR.';' expr ';' '{' compstmt '}' 
	stmt_for:  FOR.';' expr ';' expr '{' compstmt '}' 
	stmt_for:  FOR.stmt_var_or_lets ';' ';' '{' compstmt '}' 
	stmt_for:  FOR.stmt_var_or_lets ';' ';' expr '{' compstmt '}' 
	stmt_for:  FOR.stmt_var_or_lets ';' expr ';' '{' compstmt '}' 
	stmt_for:  FOR.stmt_var_or_lets ';' expr ';' expr '{' compstmt '}' 
	expr_idents: .    (107)
	exprs: .    (69)

	IDENT  shift 124
	NUMBER  shift 54
	STRING  shift 55
	FUNC  shift 33
	VAR  shift 50
	IN  reduce 107 (src line 710)
	NEW  shift 41
	TRUE  shift 56
	FALSE  shift 57
	NIL  shift 58
	MAKE  shift 42
	OPCHAN  shift 59
	LEN  shift 39
	MAP  shift 43
	IMPORT  shift 40
	'-'  shift 53
	'^'  shift 61
	'*'  shift 63
	'&'  shift 62
	'{'  shift 119
	'('  shift 36
	';'  shift 122
	'['  shift 34
	'!'  shift 60
	.  reduce 69 (src line 521)

	stmt_var_or_lets  goto 123
	stmt_var  goto 25
	stmt_lets  goto 26
	exprs  goto 51
	expr  goto 121
	expr_idents  goto 120
	slice_count  goto 35
	expr_member_or_ident  goto 31
	expr_member  goto 52
	expr_ident  goto 38
	expr_literals  goto 32
	expr_slice  goto 45
	expr_chan  goto 46
	expr_unary  goto 47
	expr_binary  goto 48
	expr_lets  goto 49
	op_binary  goto 67
	op_comparison  goto 66
	op_add  goto 65
	op_multiply  goto 64

state 29
	stmt_switch:  SWITCH.expr '{' opt_newlines stmt_switch_cases opt_newlines '}' 

	IDENT  shift 37
	NUMBER  shift 54
	STRING  shift 55
	FUNC  shift 33
	NEW  shift 41
	TRUE  shift 56
	FALSE  shift 57
	NIL  shift 58
	MAKE  shift 42
	OPCHAN  shift 59
	LEN  shift 39
	MAP  shift 43
	IMPORT  shift 40
	'-'  shift 53
	'^'  shift 61
	'*'  shift 63
	'&'  shift 62
	'{'  shift 44
	'('  shift 36
	'['  shift 34
	'!'  shift 60
	.  error

	expr  goto 125
	slice_count  goto 35
	expr_member_or_ident  goto 31
	expr_member  goto 52
	expr_ident  goto 38
	expr_literals  goto 32
	expr_slice  goto 45
	expr_chan  goto 46
	expr_unary  goto 47
	expr_binary  goto 48
	expr_lets  goto 49
	op_binary  goto 67
	op_comparison  goto 66
	op_add  goto 65
	op_multiply  goto 64

state 30
	stmt_select:  SELECT.'{' opt_newlines stmt_select_cases opt_newlines '}' 

	'{'  shift 126
	.  error


state 31
	expr:  expr_member_or_ident.    (73)

	.  reduce 73 (src line 545)


state 32
	expr:  expr_literals.    (74)

	.  reduce 74 (src line 550)


state 33
	expr:  FUNC.'(' expr_idents ')' '{' compstmt '}' 
	expr:  FUNC.'(' expr_idents VARARG ')' '{' compstmt '}' 
	expr:  FUNC.IDENT '(' expr_idents ')' '{' compstmt '}' 
	expr:  FUNC.IDENT '(' expr_idents VARARG ')' '{' compstmt '}' 

	IDENT  shift 128
	'('  shift 127
	.  error


34: shift/reduce conflict (shift 129(0), red'n 185(0)) on ']'
34: shift/reduce conflict (shift 8(0), red'n 185(0)) on '\n'
state 34
	expr:  '['.']' 
	expr:  '['.opt_newlines exprs opt_comma_newlines ']' 
	slice_count:  '['.']' 
	slice_count:  '['.']' slice_count 
	opt_newlines: .    (185)

	']'  shift 129
	'\n'  shift 8
	.  reduce 185 (src line 1154)

	opt_newlines  goto 130
	newlines  goto 131
	newline  goto 7

state 35
	expr:  slice_count.type_data '{' opt_newlines exprs opt_comma_newlines '}' 

	IDENT  shift 133
	CHAN  shift 137
	STRUCT  shift 138
	MAP  shift 136
	'*'  shift 134
	'['  shift 139
	.  error

	type_data  goto 132
	slice_count  goto 135

state 36
	expr:  '('.expr ')' 

	IDENT  shift 37
	NUMBER  shift 54
	STRING  shift 55
	FUNC  shift 33
	NEW  shift 41
	TRUE  shift 56
	FALSE  shift 57
	NIL  shift 58
	MAKE  shift 42
	OPCHAN  shift 59
	LEN  shift 39
	MAP  shift 43
	IMPORT  shift 40
	'-'  shift 53
	'^'  shift 61
	'*'  shift 63
	'&'  shift 62
	'{'  shift 44
	'('  shift 36
	'['  shift 34
	'!'  shift 60
	.  error

	expr  goto 140
	slice_count  goto 35
	expr_member_or_ident  goto 31
	expr_member  goto 52
	expr_ident  goto 38
	expr_literals  goto 32
	expr_slice  goto 45
	expr_chan  goto 46
	expr_unary  goto 47
	expr_binary  goto 48
	expr_lets  goto 49
	op_binary  goto 67
	op_comparison  goto 66
	op_add  goto 65
	op_multiply  goto 64

37: shift/reduce conflict (shift 141(0), red'n 124(0)) on '('
state 37
	expr:  IDENT.'(' exprs VARARG ')' 
	expr:  IDENT.'(' exprs ')' 
	expr_ident:  IDENT.    (124)

	'('  shift 141
	.  reduce 124 (src line 818)


38: shift/reduce conflict (shift 142(0), red'n 122(0)) on '['
state 38
	expr:  expr_ident.'[' expr ']' 
	expr_member_or_ident:  expr_ident.    (122)
	expr_slice:  expr_ident.'[' expr ':' expr ']' 
	expr_slice:  expr_ident.'[' expr ':' ']' 
	expr_slice:  expr_ident.'[' ':' expr ']' 
	expr_slice:  expr_ident.'[' ':' expr ':' expr ']' 
	expr_slice:  expr_ident.'[' expr ':' expr ':' expr ']' 

	'['  shift 142
	.  reduce 122 (src line 806)


state 39
	expr:  LEN.'(' expr ')' 

	'('  shift 143
	.  error


state 40
	expr:  IMPORT.'(' expr ')' 

	'('  shift 144
	.  error


state 41
	expr:  NEW.'(' type_data ')' 

	'('  shift 145
	.  error


state 42
	expr:  MAKE.'(' type_data ')' 
	expr:  MAKE.'(' type_data ',' expr ')' 
	expr:  MAKE.'(' type_data ',' expr ',' expr ')' 
	expr:  MAKE.'(' TYPE IDENT ',' expr ')' 

	'('  shift 146
	.  error


state 43
	expr:  MAP.'{' opt_newlines expr_map opt_comma_newlines '}' 
	expr:  MAP.'[' type_data ']' type_data '{' opt_newlines expr_map opt_comma_newlines '}' 

	'{'  shift 147
	'['  shift 148
	.  error


44: shift/reduce conflict (shift 8(0), red'n 185(0)) on '\n'
state 44
	expr:  '{'.opt_newlines expr_map opt_comma_newlines '}' 
	opt_newlines: .    (185)

	'\n'  shift 8
	.  reduce 185 (src line 1154)

	opt_newlines  goto 149
	newlines  goto 131
	newline  goto 7

state 45
	expr:  expr_slice.    (102)

	.  reduce 102 (src line 696)


state 46
	expr:  expr_chan.    (103)

	.  reduce 103 (src line 701)


state 47
	expr:  expr_unary.    (104)

	.  reduce 104 (src line 706)


state 48
	expr:  expr_binary.    (105)

	.  reduce 105 (src line 707)


state 49
	expr:  expr_lets.    (106)

	.  reduce 106 (src line 708)


state 50
	stmt_var:  VAR.expr_idents ASSIGN exprs 
	expr_idents: .    (107)

	IDENT  shift 151
	.  reduce 107 (src line 710)

	expr_idents  goto 150

state 51
	stmt_lets:  exprs.op_assign exprs 
	stmt_lets:  exprs.EQOPCHAN expr 
	exprs:  exprs.',' opt_newlines expr 
	exprs:  exprs.',' opt_newlines expr_ident 

	EQOPCHAN  shift 153
	COLASSIGN  shift 116
	ASSIGN  shift 117
	','  shift 154
	.  error

	op_assign  goto 152

state 52
	expr_member_or_ident:  expr_member.    (121)

	.  reduce 121 (src line 801)


state 53
	expr_literals:  '-'.NUMBER 
	expr_unary:  '-'.expr 

	IDENT  shift 37
	NUMBER  shift 155
	STRING  shift 55
	FUNC  shift 33
	NEW  shift 41
	TRUE  shift 56
	FALSE  shift 57
	NIL  shift 58
	MAKE  shift 42
	OPCHAN  shift 59
	LEN  shift 39
	MAP  shift 43
	IMPORT  shift 40
	'-'  shift 53
	'^'  shift 61
	'*'  shift 63
	'&'  shift 62
	'{'  shift 44
	'('  shift 36
	'['  shift 34
	'!'  shift 60
	.  error

	expr  goto 156
	slice_count  goto 35
	expr_member_or_ident  goto 31
	expr_member  goto 52
	expr_ident  goto 38
	expr_literals  goto 32
	expr_slice  goto 45
	expr_chan  goto 46
	expr_unary  goto 47
	expr_binary  goto 48
	expr_lets  goto 49
	op_binary  goto 67
	op_comparison  goto 66
	op_add  goto 65
	op_multiply  goto 64

state 54
	expr_literals:  NUMBER.    (126)

	.  reduce 126 (src line 835)


state 55
	expr_literals:  STRING.    (127)

	.  reduce 127 (src line 844)


state 56
	expr_literals:  TRUE.    (128)

	.  reduce 128 (src line 849)


state 57
	expr_literals:  FALSE.    (129)

	.  reduce 129 (src line 854)


state 58
	expr_literals:  NIL.    (130)

	.  reduce 130 (src line 859)


state 59
	expr_chan:  OPCHAN.expr 

	IDENT  shift 37
	NUMBER  shift 54
	STRING  shift 55
	FUNC  shift 33
	NEW  shift 41
	TRUE  shift 56
	FALSE  shift 57
	NIL  shift 58
	MAKE  shift 42
	OPCHAN  shift 59
	LEN  shift 39
	MAP  shift 43
	IMPORT  shift 40
	'-'  shift 53
	'^'  shift 61
	'*'  shift 63
	'&'  shift 62
	'{'  shift 44
	'('  shift 36
	'['  shift 34
	'!'  shift 60
	.  error

	expr  goto 157
	slice_count  goto 35
	expr_member_or_ident  goto 31
	expr_member  goto 52
	expr_ident  goto 38
	expr_literals  goto 32
	expr_slice  goto 45
	expr_chan  goto 46
	expr_unary  goto 47
	expr_binary  goto 48
	expr_lets  goto 49
	op_binary  goto 67
	op_comparison  goto 66
	op_add  goto 65
	op_multiply  goto 64

state 60
	expr_unary:  '!'.expr 

	IDENT  shift 37
	NUMBER  shift 54
	STRING  shift 55
	FUNC  shift 33
	NEW  shift 41
	TRUE  shift 56
	FALSE  shift 57
	NIL  shift 58
	MAKE  shift 42
	OPCHAN  shift 59
	LEN  shift 39
	MAP  shift 43
	IMPORT  shift 40
	'-'  shift 53
	'^'  shift 61
	'*'  shift 63
	'&'  shift 62
	'{'  shift 44
	'('  shift 36
	'['  shift 34
	'!'  shift 60
	.  error

	expr  goto 158
	slice_count  goto 35
	expr_member_or_ident  goto 31
	expr_member  goto 52
	expr_ident  goto 38
	expr_literals  goto 32
	expr_slice  goto 45
	expr_chan  goto 46
	expr_unary  goto 47
	expr_binary  goto 48
	expr_lets  goto 49
	op_binary  goto 67
	op_comparison  goto 66
	op_add  goto 65
	op_multiply  goto 64

state 61
	expr_unary:  '^'.expr 

	IDENT  shift 37
	NUMBER  shift 54
	STRING  shift 55
	FUNC  shift 33
	NEW  shift 41
	TRUE  shift 56
	FALSE  shift 57
	NIL  shift 58
	MAKE  shift 42
	OPCHAN  shift 59
	LEN  shift 39
	MAP  shift 43
	IMPORT  shift 40
	'-'  shift 53
	'^'  shift 61
	'*'  shift 63
	'&'  shift 62
	'{'  shift 44
	'('  shift 36
	'['  shift 34
	'!'  shift 60
	.  error

	expr  goto 159
	slice_count  goto 35
	expr_member_or_ident  goto 31
	expr_member  goto 52
	expr_ident  goto 38
	expr_literals  goto 32
	expr_slice  goto 45
	expr_chan  goto 46
	expr_unary  goto 47
	expr_binary  goto 48
	expr_lets  goto 49
	op_binary  goto 67
	op_comparison  goto 66
	op_add  goto 65
	op_multiply  goto 64

state 62
	expr_unary:  '&'.expr 

	IDENT  shift 37
	NUMBER  shift 54
	STRING  shift 55
	FUNC  shift 33
	NEW  shift 41
	TRUE  shift 56
	FALSE  shift 57
	NIL  shift 58
	MAKE  shift 42
	OPCHAN  shift 59
	LEN  shift 39
	MAP  shift 43
	IMPORT  shift 40
	'-'  shift 53
	'^'  shift 61
	'*'  shift 63
	'&'  shift 62
	'{'  shift 44
	'('  shift 36
	'['  shift 34
	'!'  shift 60
	.  error

	expr  goto 160
	slice_count  goto 35
	expr_member_or_ident  goto 31
	expr_member  goto 52
	expr_ident  goto 38
	expr_literals  goto 32
	expr_slice  goto 45
	expr_chan  goto 46
	expr_unary  goto 47
	expr_binary  goto 48
	expr_lets  goto 49
	op_binary  goto 67
	op_comparison  goto 66
	op_add  goto 65
	op_multiply  goto 64

state 63
	expr_unary:  '*'.expr 

	IDENT  shift 37
	NUMBER  shift 54
	STRING  shift 55
	FUNC  shift 33
	NEW  shift 41
	TRUE  shift 56
	FALSE  shift 57
	NIL  shift 58
	MAKE  shift 42
	OPCHAN  shift 59
	LEN  shift 39
	MAP  shift 43
	IMPORT  shift 40
	'-'  shift 53
	'^'  shift 61
	'*'  shift 63
	'&'  shift 62
	'{'  shift 44
	'('  shift 36
	'['  shift 34
	'!'  shift 60
	.  error

	expr  goto 161
	slice_count  goto 35
	expr_member_or_ident  goto 31
	expr_member  goto 52
	expr_ident  goto 38
	expr_literals  goto 32
	expr_slice  goto 45
	expr_chan  goto 46
	expr_unary  goto 47
	expr_binary  goto 48
	expr_lets  goto 49
	op_binary  goto 67
	op_comparison  goto 66
	op_add  goto 65
	op_multiply  goto 64

state 64
	expr_binary:  op_multiply.    (151)

	.  reduce 151 (src line 962)


state 65
	expr_binary:  op_add.    (152)

	.  reduce 152 (src line 968)


state 66
	expr_binary:  op_comparison.    (153)

	.  reduce 153 (src line 973)


state 67
	expr_binary:  op_binary.    (154)

	.  reduce 154 (src line 978)


state 68
	compstmt:  stmts opt_term.    (2)

	.  reduce 2 (src line 121)


 69: reduce/reduce conflict  (red'ns 181 and 5) on $end
 69: reduce/reduce conflict  (red'ns 181 and 5) on CASE
 69: reduce/reduce conflict  (red'ns 181 and 5) on DEFAULT
 69: reduce/reduce conflict  (red'ns 181 and 5) on '}'
 69: reduce/reduce conflict  (red'ns 181 and 5) on '\n'
state 69
	stmts:  stmts term.stmt 
	opt_term:  term.    (181)
	stmt: .    (5)
	exprs: .    (69)

	IDENT  shift 37
	NUMBER  shift 54
	STRING  shift 55
	FUNC  shift 33
	RETURN  shift 13
	VAR  shift 50
	THROW  shift 14
	IF  shift 27
	FOR  shift 28
	NEW  shift 41
	TRUE  shift 56
	FALSE  shift 57
	NIL  shift 58
	MODULE  shift 15
	TRY  shift 16
	BREAK  shift 11
	CONTINUE  shift 12
	SWITCH  shift 29
	SELECT  shift 30
	GO  shift 17
	MAKE  shift 42
	OPCHAN  shift 59
	EQOPCHAN  reduce 69 (src line 521)
	LEN  shift 39
	DELETE  shift 18
	CLOSE  shift 19
	MAP  shift 43
	IMPORT  shift 40
	COLASSIGN  reduce 69 (src line 521)
	ASSIGN  reduce 69 (src line 521)
	'-'  shift 53
	'^'  shift 61
	'*'  shift 63
	'&'  shift 62
	'{'  shift 44
	'('  shift 36
	','  reduce 69 (src line 521)
	'['  shift 34
	'!'  shift 60
	.  reduce 5 (src line 151)

	stmt  goto 162
	stmt_var_or_lets  goto 10
	stmt_var  goto 25
	stmt_lets  goto 26
	stmt_if  goto 20
	stmt_for  goto 21
	stmt_switch  goto 22
	stmt_select  goto 23
	exprs  goto 51
	expr  goto 24
	slice_count  goto 35
	expr_member_or_ident  goto 31
	expr_member  goto 52
	expr_ident  goto 38
	expr_literals  goto 32
	expr_slice  goto 45
	expr_chan  goto 46
	expr_unary  goto 47
	expr_binary  goto 48
	expr_lets  goto 49
	op_binary  goto 67
	op_comparison  goto 66
	op_add  goto 65
	op_multiply  goto 64

70: shift/reduce conflict (shift 8(0), red'n 182(0)) on '\n'
state 70
	term:  ';' newlines.    (182)
	newlines:  newlines.newline 

	'\n'  shift 8
	.  reduce 182 (src line 1149)

	newline  goto 71

state 71
	newlines:  newlines newline.    (188)

	.  reduce 188 (src line 1160)


state 72
	stmt:  RETURN exprs.    (9)
	exprs:  exprs.',' opt_newlines expr 
	exprs:  exprs.',' opt_newlines expr_ident 

	','  shift 154
	.  reduce 9 (src line 170)


state 73
	exprs:  expr.    (70)
	expr:  expr.'?' expr ':' expr 
	expr:  expr.NILCOALESCE expr 
	expr:  expr.'(' exprs VARARG ')' 
	expr:  expr.'(' exprs ')' 
	expr:  expr.'[' expr ']' 
	expr:  expr.IN expr 
	expr_member:  expr.'.' IDENT 
	expr_slice:  expr.'[' expr ':' expr ']' 
	expr_slice:  expr.'[' expr ':' ']' 
	expr_slice:  expr.'[' ':' expr ']' 
	expr_slice:  expr.'[' ':' expr ':' expr ']' 
	expr_slice:  expr.'[' expr ':' expr ':' expr ']' 
	expr_chan:  expr.OPCHAN expr 
	expr_lets:  expr.PLUSPLUS 
	expr_lets:  expr.MINUSMINUS 
	expr_lets:  expr.PLUSEQ expr 
	expr_lets:  expr.MINUSEQ expr 
	expr_lets:  expr.OREQ expr 
	expr_lets:  expr.MULEQ expr 
	expr_lets:  expr.DIVEQ expr 
	expr_lets:  expr.ANDEQ expr 
	op_multiply:  expr.'*' expr 
	op_multiply:  expr.'/' expr 
	op_multiply:  expr.'%' expr 
	op_multiply:  expr.SHIFTLEFT expr 
	op_multiply:  expr.SHIFTRIGHT expr 
	op_multiply:  expr.'&' expr 
	op_add:  expr.'+' expr 
	op_add:  expr.'-' expr 
	op_add:  expr.'|' expr 
	op_comparison:  expr.EQEQ expr 
	op_comparison:  expr.NEQ expr 
	op_comparison:  expr.'<' expr 
	op_comparison:  expr.LE expr 
	op_comparison:  expr.'>' expr 
	op_comparison:  expr.GE expr 
	op_binary:  expr.ANDAND expr 
	op_binary:  expr.OROR expr 
